# fw-compiler

./: CMakeLists.txt  README.md  settings.cmake
configuration/: app.h
include/: fwcode.h  fwcompile.h  logger.h
src/: fwcode.c  fwcompile.c  logger.c  main.c
